these_pasteur/exemples/EsteRML/test/good/loop3.strl
signal s in
  loop
    present s then print "OK" else print "ERROR" end;
    pause;
    emit s
  end
  ||
  emit s
end.