these_pasteur/exemples/EsteRML/test/bad/loop4.strl
signal s in
  loop
    emit s; pause;
    present s then print "OK" else print "ERROR" end
  end
end.